After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686276 - rtsp: http tunneling does not work
rtsp: http tunneling does not work
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.0.3
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-17 08:45 UTC by Ognyan Tonchev (redstar_)
Modified: 2012-10-25 16:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
return false from dispatch () if the read and write sockets have been unset in tunnel_complete () (1.08 KB, patch)
2012-10-17 08:45 UTC, Ognyan Tonchev (redstar_)
none Details | Review

Description Ognyan Tonchev (redstar_) 2012-10-17 08:45:03 UTC
Created attachment 226612 [details] [review]
return false from dispatch () if the read and write sockets have been unset in tunnel_complete ()

Setting up HTTP tunnels causes segfaults since the watch for the second connection is not destroyed anymore in tunnel_complete () and the connection will still be used even though it is not valid anymore.
Comment 1 Wim Taymans 2012-10-25 16:07:32 UTC
commit 6e5ea441e7896c6bcbb505d0f1e428fafcbada30
Author: Ognyan Tonchev <ognyan@axis.com>
Date:   Thu Oct 25 09:19:21 2012 +0200

    rtsp: Don't use invalid sockets
    
    return false from dispatch () if the read and write sockets have been
    unset in tunnel_complete ()
    
    Setting up HTTP tunnels causes segfaults since the watch for the second
    connection is not destroyed anymore in tunnel_complete () and the connection
    will still be used even though it is not valid anymore.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=686276